--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgres://usuario:password@database:5432/symfony_base_datos
+      DATABASE_URL: postgres://usuario:password@db:5432/symfony_base_datos
 
   db:
     image: postgres:15
