--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -13,9 +13,12 @@
 # config/packages/nelmio_cors.yaml
 nelmio_cors:
     defaults:
-        allow_credentials: true
-        allow_origin: ['http://localhost:4250']  
+        allow_origin: ['http://localhost:4250']
+        allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         allow_headers: ['Content-Type', 'Authorization']
-        allow_methods: ['GET', 'POST', 'PUT', 'DELETE']
+        expose_headers: []
+        max_age: 3600
+        allow_credentials: false
+
 
 
